--- a/_posts/2019-04-02-java-oop.md
+++ b/_posts/2019-04-02-java-oop.md
@@ -12,7 +12,11 @@ tag:
 
 ### 01、
 
-很久没有思考过什么是面向对象这个问题了，就好像很久没有吃过烤红薯一样，那股香味究竟是什么，已经很难准确地形容出来了。脑海中只浮现出这样一幅动图：
+很久没有思考过什么是面向对象这个问题了，就好像很久没有吃过烤红薯一样，那股香味究竟是什么，已经很难准确地形容出来了。
+
+<!--more-->
+
+脑海中只浮现出这样一幅动图：
 
 ![](https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike72%2C5%2C5%2C72%2C24/sign=e8071ed9bf1bb0519b29bb7a5713b1d1/0df431adcbef76090a468b6422dda3cc7dd99eff.jpg)
 
