ziyou 协助修复拼写错误问题

--- a/_posts/2019-04-18-java-tree.md
+++ b/_posts/2019-04-18-java-tree.md
@@ -7,7 +7,7 @@ tag:
     - java
 ---
 
-JAVA中在HahsMap中，在JDK1.8之后，就出现了红黑树，那么我们就得研究一下这个数据结构了，毕竟框架都是对底层进行的封装，那么我们
+JAVA中在HashMap中，在JDK1.8之后，就出现了红黑树，那么我们就得研究一下这个数据结构了，毕竟框架都是对底层进行的封装，那么我们
 一起看一下吧。
 <!--more-->
 
