--- a/_posts/2019-07-24-OKR.md
+++ b/_posts/2019-07-24-OKR.md
@@ -54,7 +54,8 @@ O 的制定我们需要注意这么几点：
 
 前面说了那么多都是理论，这里给一个实际的 OKR 案例给大家看一下具体是什么样子的。另外提一下 OKR 的编写格式没有固定的要求，有人喜欢用 Excel，有人喜欢用 Word 或者 PPT，都可以，找到一种自己喜欢的方式就好，我个人比较喜欢用脑图的方式，这里就采用思维导图给大家展示一个。
 
-![image-20190725004350573](/Users/silence/Library/Application Support/typora-user-images/image-20190725004350573.png)
+![image-20190725004350573](http://www.justdojava.com/assets/images/2019/java/image_ziyou/okr1.png)
+
 
 (Ps: 这个思维导图是用 Mac 版的印象笔记画的，有点小 bug 不过能用)
 
