--- a/_posts/2019-09-08-zsxq-0908.md
+++ b/_posts/2019-09-08-zsxq-0908.md
@@ -12,11 +12,13 @@ published: true
 
 不知道你听说了没有，反正我是听说了，昨天有人为我们站台了！！！对于不知道的小伙伴欢迎去阅读[今天，我为他们站台！](https://mp.weixin.qq.com/s/3K8toZGyiNj6h6aheczioA)。
 
+<!--more-->
+
 既然都有人出来为我们站台了，那有必要和大家预告一下我们的内部决定。首先知识星球手续费调至 20% 的事，我想大家应该都知道了，如果还不知道的可以去看[生存还是灭亡？这是一个问题！加入还是不加入？这是最后一个机遇！](https://mp.weixin.qq.com/s/0DB9T0Va_OBuas1h3iGoLA)。
 
 关于内部的决定，可以给大家看一下我们内部讨论的截图：
 
-![price](http://justdojava.com/assets/2019/java/image_ziyou/price.png)
+![price](http://justdojava.com/assets/images/2019/java/image_ziyou/price.png)
 
 
 
