--- a/_posts/2019-10-20-lru-cache.md
+++ b/_posts/2019-10-20-lru-cache.md
@@ -8,33 +8,33 @@ tags:
 published: true
 ---
 
-## 前言
+## 01、前言
 
 我们常用缓存提升数据查询速度，由于缓存容量有限，当缓存容量到达上限，就需要删除部分数据挪出空间，这样新数据才可以添加进来。缓存数据不能随机删除，一般情况下我们需要根据某种算法删除缓存数据。常用淘汰算法有 LRU,LFU,FIFO,这篇文章我们聊聊 LRU 算法。
 
 <!--more-->
 
-## LRU 简介
+## 02、LRU 简介
 
 **LRU** 是 Least Recently Used 的缩写，这种算法认为最近使用的数据是热门数据，下一次很大概率将会再次被使用。而最近很少被使用的数据，很大概率下一次不再用到。当缓存容量的满时候，优先淘汰最近很少使用的数据。
 
 假设现在缓存内部数据如图所示：
 
-![image.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-a5885ae0.png)
+![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-a5885ae0.png)
 
 > 这里我们将列表第一个节点称为头结点，最后一个节点为尾结点。
 
 当调用缓存获取 key=1 的数据，LRU 算法需要将  1 这个节点移动到头结点，其余节点不变，如图所示。
 
-![image.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-d2ca1dc0.png)
+![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-d2ca1dc0.png)
 
 然后我们插入一个 key=8 节点，此时缓存容量到达上限，所以加入之前需要先删除数据。由于每次查询都会将数据移动到头结点，未被查询的数据就将会下沉到尾部节点，尾部的数据就可以认为是最少被访问的数据，所以删除尾结点的数据。
 
-![image.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-96d0510f.png)
+![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-96d0510f.png)
 
 然后我们直接将数据添加到头结点。
 
-![image.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-496eb211.png)
+![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/image-496eb211.png)
 
 这里总结一下 LRU 算法具体步骤：
 
@@ -42,7 +42,7 @@ published: true
 - 缓存数据被命中，将数据移动到列表头部
 - 缓存已满的时候，移除列表尾部数据。
 
-## LRU 算法实现
+## 03、LRU 算法实现
 
 上面例子中可以看到，LRU 算法需要添加头节点，删除尾结点。而链表添加节点/删除节点时间复杂度 O(1)，非常适合当做存储缓存数据容器。但是不能使用普通的单向链表，单向链表有几点劣势:
 
@@ -55,7 +55,7 @@ published: true
 
 综上使用双向链表加散列表结合体，数据结构如图所示:
 
-![LRU.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/LRU-185af50f.png)
+![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/LRU-185af50f.png)
 
 > 在双向链表中特意增加两个『哨兵』节点，不用来存储任何数据。使用哨兵节点，增加/删除节点的时候就可以不用考虑边界节点不存在情况，简化编程难度，降低代码复杂度。
 
@@ -184,7 +184,7 @@ public class LRUCache {
 }
 ```
 
-## LRU 算法分析
+## 04、LRU 算法分析
 
 缓存命中率是缓存系统的非常重要指标，如果缓存系统的缓存命中率过低，将会导致查询回流到数据库，导致数据库的压力升高。
 
@@ -194,13 +194,13 @@ LRU 算法优势在于算法实现难度不大，对于对于热点数据， LRU
 
 LRU 算法劣势在于对于偶发的批量操作，比如说批量查询历史数据，就有可能使缓存中热门数据被这些历史数据替换，造成缓存污染，导致缓存命中率下降，减慢了正常数据查询。
 
-## LRU 算法改进方案
+## 05、LRU 算法改进方案
 
 > 以下方案来源与 MySQL InnoDB  LRU 改进算法
 
 将链表拆分成两部分，分为热数据区，与冷数据区，如图所示。
 
- ![LRUimmprove.png](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/LRUimmprove-3ca18189.png)
+ ![](http://www.justdojava.com/assets/images/2019/java/image_andyxh/20191020/LRUimmprove-3ca18189.png)
 
 改进之后算法流程将会变成下面一样:
 
