--- a/_posts/release/2019-10-13-k8s-series01.md
+++ b/_posts/release/2019-10-13-k8s-series01.md
@@ -1,8 +1,8 @@
 ---
-layout： post
+layout: post
 title: 【Kubernetes】关于 K8s ，你应该知道的一些东西
-tagline： by 郑璐璐
-categories： k8s
+tagline: by 郑璐璐
+categories: k8s
 tags: k8s
 ---
 
