--- a/_posts/release/2019-11-05-java-HTTP3.md
+++ b/_posts/release/2019-11-05-java-HTTP3.md
@@ -2,7 +2,7 @@
 layout: post
 title:  面试的时候问你HTTP是如何使用TCP连接的你还不知道怎么回答么？今天我就来告诉你！
 tagline: by 懿
-categories: java
+categories: HTTP系列
 tag: 
     - java
 ---
