--- a/_posts/release/2019-04-02-java-oop.md
+++ b/_posts/release/2019-04-02-java-oop.md
@@ -2,9 +2,9 @@
 layout: post
 title:  面向对象的思想，谈面试的过程？
 tagline: by 沉默王二
-categories: java
+categories: java基础
 tag: 
-    - java
+    - 沉默王二
 ---
 
 
