--- a/_posts/release/2019-04-05-java-List.md
+++ b/_posts/release/2019-04-05-java-List.md
@@ -2,9 +2,9 @@
 layout: post
 title:  List中的ArrayList和LinkedList源码分析
 tagline: by 懿
-categories: java
-tag: 
-    - java
+categories: java数据结构
+tags: 
+    - 懿
 ---
 
 
