--- a/_posts/release/2019-04-18-java-tree.md
+++ b/_posts/release/2019-04-18-java-tree.md
@@ -2,9 +2,9 @@
 layout: post
 title:  JAVA中的树(二叉树AND红黑树)
 tagline: by 懿
-categories: java
-tag: 
-    - java
+categories: java数据结构
+tags: 
+    - 懿
 ---
 
 JAVA中在HashMap中，在JDK1.8之后，就出现了红黑树，那么我们就得研究一下这个数据结构了，毕竟框架都是对底层进行的封装，那么我们
