--- a/_posts/release/2019-05-06-https.md
+++ b/_posts/release/2019-05-06-https.md
@@ -2,9 +2,9 @@
 layout: post
 title: 五分钟搞定 HTTPS 配置，手把手教
 tagline: by 沉默王二
-categories: https
-tag:
-    - https
+categories: HTTP系列
+tags:
+    - 沉默王二
 ---
 
 
