--- a/_posts/release/2019-05-24-java.md
+++ b/_posts/release/2019-05-24-java.md
@@ -2,9 +2,9 @@
 layout: post
 title: 蓦然回首，Java 已经 24 岁了！
 tagline: by 沉默王二
-categories: Java
-tag:
-    - Java
+categories: Java历史
+tags:
+    - 沉默王二
 ---
 
 
