--- a/_posts/release/2019-07-01-yarn.md
+++ b/_posts/release/2019-07-01-yarn.md
@@ -1,11 +1,11 @@
 ---
 
 layout: post
-category: BigData
+categories: 大数据
 title: Apache Hadoop YARN 的架构与运行流程 
 tagline: by 乔二爷
 tags: 
-    - BigData
+    - 乔二爷
 ---
 
 Apache Hadoop YARN 的架构与运行流程。
