--- a/_posts/release/2019-07-07-java-mail.md
+++ b/_posts/release/2019-07-07-java-mail.md
@@ -2,8 +2,9 @@
 layout: post
 title: 手把手教你用 Java 发送邮件，不用框架！
 tagline: by 江南一点雨
-categories: java
-tag: [java,mail]
+categories: java工具
+tag: 
+    - 江南一点雨
 ---
 
 邮件发送也是一个老生常谈的问题了，代码虽然简单，但是许多小伙伴对过程不太理解，所以还是打算和各位小伙伴聊聊这个话题。  
