--- a/_posts/release/2019-07-14-http-url.md
+++ b/_posts/release/2019-07-14-http-url.md
@@ -3,7 +3,8 @@ layout: post
 title: 请求地址最后面的 “/” 加和不加到底有什么区别？
 tagline: by 江南一点雨
 categories: HTTP
-tag: [http,url]
+tags: 
+ - 江南一点雨
 ---
 
 URL 是我们每天畅游在互联网世界中最最常见的东西了，对于普通用户来说，URL 就是一个字符串，比如 http://www.justdojava.com ，但是对于我们开发者而言，除了 URL，还有一个东西叫做 URI，很多人经常搞不清楚这两个概念，本文我们就从这个话题开始。  
