--- a/_posts/release/2019-07-18-java-nio2.md
+++ b/_posts/release/2019-07-18-java-nio2.md
@@ -2,8 +2,9 @@
 layout: post
 title: Java：前程似锦的 NIO 2.0
 tagline: by 沉默王二
-categories: java
-tag: [java,nio]
+categories: javaIO
+tags: 
+    - 沉默王二
 ---
 
 Java 之所以能够霸占编程语言的榜首，其强大、丰富的类库功不可没，几乎所有的编程问题都能在其中找到解决方案。但在早期的版本当中，输入输出（I/O）流并不那么令开发者感到愉快：
