--- a/_posts/release/2019-07-24-OKR.md
+++ b/_posts/release/2019-07-24-OKR.md
@@ -3,8 +3,8 @@ layout: post
 title: 聊聊目标管理之 OKR
 tagline: by 子悠  
 categories: OKR  
-tag: 
-    - OKR
+tags: 
+    - 子悠  
 ---
 
 这篇文章我们不谈技术，聊点轻松的，那聊什么呢？聊一下最近很火的目标管理 OKR。不知道小伙伴你们的公司什么情况，我的公司今年开始推行 OKR，用了大半年的时间，感觉效果还不错，上周六又参加了一天的复盘培训会，刚好借此机会总结一下顺便跟大家分享一下这个优秀的工具。
