--- a/_posts/release/2019-07-30-java-lru.md
+++ b/_posts/release/2019-07-30-java-lru.md
@@ -3,8 +3,8 @@ layout: post
 title: 经典的 LRU 算法，你真的了解吗？
 tagline: by 子悠  
 categories: 算法
-tag: 
-    - 算法
+tags: 
+    - 子悠  
 ---
 
 **人生有涯，学海无涯。**
