--- a/_posts/release/2019-09-08-zsxq-0908.md
+++ b/_posts/release/2019-09-08-zsxq-0908.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-category: Java
+categories: 软文
 title: 听说，昨天有人为我们站台了
 tagline: by 子悠
 tags: 
-  - 知识星球
-published: true
+  - 子悠
+
 ---
 
 **人生有涯，学海无涯**
