--- a/_posts/release/2019-09-21-k8s-yaml.md
+++ b/_posts/release/2019-09-21-k8s-yaml.md
@@ -3,7 +3,8 @@ layout: post
 title: 【Kubernetes】yaml 文件详解
 tagline: by 郑璐璐
 categories: k8s
-tag:
+tags:
+    - 郑璐璐
 ---
 
 yaml 文件用在很多地方，但是这里以介绍在 Kubernetes 中的应用为主。
