--- a/_posts/release/2019-09-24-java-XSS.md
+++ b/_posts/release/2019-09-24-java-XSS.md
@@ -2,8 +2,9 @@
 layout: post
 title: 你们的系统真的安全吗？你们系统是不是也有这种诡异的情况呢？
 tagline: by 懿
-categories: java
-tag:
+categories: Web安全
+tags:
+    - 懿
 ---
 
 这个文章来源灵感是公司的项目在安全检查的时候，发现了很多 SQL 注入的一些问题还有一些 XSS 攻击问题，SQL 注入我们都是比较了解的，那么什么是 XSS 攻击呢？测试反馈给我的时候我是一脸懵逼呀，现在我们就来说一下什么是 XSS 攻击，以及我们怎么防止它的出现。
