--- a/_posts/release/2019-10-10-java-Http.md
+++ b/_posts/release/2019-10-10-java-Http.md
@@ -2,9 +2,9 @@
 layout: post
 title:  重温HTTP，你到底做了什么？
 tagline: by 懿
-categories: java
-tag: 
-    - java
+categories: HTTP
+tags: 
+    - 懿
 ---
 
 之前在回忆面试题的时候，面试官曾经问过我关于网络协议的一些东西，回答的当时感觉自己很垃圾，然后面试结束之后，自行百度，翻阅书籍，然后做了细致的整理，现在我就来分享给大家。
