--- a/_posts/release/2019-10-13-java-Http2.md
+++ b/_posts/release/2019-10-13-java-Http2.md
@@ -2,9 +2,9 @@
 layout: post
 title:  再谈 HTTP，你还要继续更新不？
 tagline: by 懿
-categories: java
+categories: HTTP
 tag: 
-    - java
+    - 懿
 ---
 
 之前的第一篇文章我介绍了关于 HTTP 的一些简单的知识，比如说它的状态码，请求方式，以及 HTTP 的报文，这篇文章我将给大家带来关于 HTTP 版本的那些问题，比如说1.0和1.1和2.0.
