--- a/_posts/release/2019-10-13-k8s-series01.md
+++ b/_posts/release/2019-10-13-k8s-series01.md
@@ -3,7 +3,8 @@ layout: post
 title: 【Kubernetes】关于 K8s ，你应该知道的一些东西
 tagline: by 郑璐璐
 categories: k8s
-tags: k8s
+tags: 
+    - 郑璐璐
 ---
 
 关于 K8s ，你至少应该知道这些。
