--- a/_posts/release/2019-10-24-magic-num.md
+++ b/_posts/release/2019-10-24-magic-num.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-category: Java
+category: java基础
 title: Java 中令人匪夷所思的 Magic 之魔数
 tagline: by 子悠
 tags:
-  - Java
+  - 子悠
 ---
 
 ### 01、故事背景
