--- a/_posts/release/2019-11-05-java-HTTP3.md
+++ b/_posts/release/2019-11-05-java-HTTP3.md
@@ -3,8 +3,8 @@ layout: post
 title:  面试的时候问你HTTP是如何使用TCP连接的你还不知道怎么回答么？今天我就来告诉你！
 tagline: by 懿
 categories: HTTP系列
-tag: 
-    - java
+tags: 
+    - 懿
 ---
 
 之前我写了篇关于 HTTP 的文章，文章中讲述了 HTTP的特点，HTTP 的报文，HTTP 的请求方式等知识，接下来，深入了，我们就关于 HTTP 引发的面试题来进行入手，一起来看一下吧！
