--- a/_posts/2019-11-10-hotswap.md
+++ b/_posts/2019-11-10-hotswap.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-category: Java
+categories: Java
 title: 手把手教你实现热更新功能，带你了解 Arthas 热更新背后的原理
 tagline: by 小黑
 tags: 
-  - Java
-published: true
+  - 小黑
 ---
 
 ## 一、前言
