--- a/_posts/2019-11-07-java-HTTP4.md
+++ b/_posts/2019-11-07-java-HTTP4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  关于 HITP 代理，你还需要了解这些，不然面试你是过不去的！
+title:  关于 HTTP 代理，你还需要了解这些，不然面试你是过不去的！
 tagline: by 懿
 categories: HTTP系列
 tags: 
