部分内容修改

--- a/_posts/2019-12-18-java-io-1.md
+++ b/_posts/2019-12-18-java-io-1.md
@@ -68,7 +68,7 @@ OutputStream out = new BufferedOutputStream(new ObjectOutputStream(new FileOutpu
 ### 三、基于字符操作的接口
 **不管是磁盘还是网络传输，最小的存储单元都是字节，而不是字符**，所以 I/O 操作的都是字节而不是字符，但是为什么要有操作字符的 I/O 接口呢？
 
-这是因为我们的程序中通常操作的数据都是以字符形式，**为了程序操作更方便而提供一个直接写字符的 I/O 接口，如此而已。**
+这是因为我们的程序中通常操作的数据都是以字符形式，**为了程序操作更方便而提供一个直接写字符的 I/O 接口，仅此而已。**
 
 基于字符的输入和输出操作接口分别是：Reader  和 Writer ，下图是字符的 I/O 操作接口涉及到的类结构图。
 #### 3.1、字符输入流
@@ -131,7 +131,7 @@ InputStream 到 Reader 的过程需要指定编码字符集，否则将采用操
 
 **在 Java I/O 体系中，File 类是唯一代表磁盘文件本身的对象**。
 
-File 类定义了一些与平台无关的方法来操作文件，包括检查一个文件**是否存在、创建、删除文件、重命名文件、判断文件的读写权限是否存在、设置和查询文件的最近修改时间**等等操作。
+File 类定义了一些与平台无关的方法来操作文件，包括检查一个**文件是否存在、创建、删除文件、重命名文件、判断文件的读写权限是否存在、设置和查询文件的最近修改时间**等等操作。
 
 值得注意的是 Java 中通常的 File 并不代表一个真实存在的文件对象，当你通过指定一个路径描述符时，它就会返回一个代表这个路径相关联的一个**虚拟对象**，这个可能是一个真实存在的文件或者是一个包含多个文件的目录。
 
@@ -330,7 +330,7 @@ NIO 这两种通道都支持**阻塞和非阻塞**两种模式。阻塞模式使
 
 还有一个 **Buffer** 类，你可以将它看作为 IO 中 **Stream**，但是它比 IO 中的 **Stream** 更加具体化，我们可以将它比作为车上的座位，**Channel** 如果是汽车的话，那么 **Buffer** 就是汽车上的座位，**Channel** 如果是高铁上，那么 **Buffer** 就是高铁上的座位，它始终是一个具体的概念，这一点与 **Stream** 不同。
 
-**Stream** 只能代表是一个座位，至于是什么座位由你自己去想象，也就是说你在上车之前并不知道这个车上是否还有没有座位，也不知道上的是什么车，因为你并不能选择，这些信息都已经被封装在了运输工具（**Socket**）里面了。
+**Socket 中的 Stream** 只能代表是一个座位，至于是什么座位由你自己去想象，也就是说你在上车之前并不知道这个车上是否还有没有座位，也不知道上的是什么车，因为你并不能选择，这些信息都已经被封装在了运输工具（**Socket**）里面了。
 
 NIO 引入了 **Channel、Buffer 和 Selector** 就是想把 IO 传输过程中涉及到的**信息具体化**，让程序员有机会去控制它们。
 
