--- a/_posts/2019-12-22-redis-PS.md
+++ b/_posts/2019-12-22-redis-PS.md
@@ -10,7 +10,7 @@ tags:
 ### 01、前言
 
 发布订阅系统在我们日常的工作中经常会使用到，这种场景大部分情况我们都是使用消息队列的，常用的消息队列有 Kafka，RocketMQ，RabbitMQ，每一种消息队列都有其特性，关于 Kafka 的使用和源码分析，公号前面有相关的文章，大家可以前往回顾一下，另外两款消息队列大家有需要可以自行研究，后续我们会出相应的介绍文章。这篇文章主要是给大家介绍 Redis 的发布订阅系统，很多时候我们可能不需要独立部署相应的消息队列，只是简单的使用，而且数据量也不会太大，这种情况下，我们就可以使用 Redis 的 Pub/Sub 模型。
-
+<!--more-->
 ### 02、使用方式
 
 #### 2.1 发布与订阅
