--- a/_posts/2019-12-22-redis-PS.md
+++ b/_posts/2019-12-22-redis-PS.md
@@ -204,7 +204,7 @@ public void punsubscribe(String[] subscribeList, Object client) {
 
 ### 05、发布消息
 
-发布消息比较好容易理解，当一个客户端执行了`publish channelName message` 命令的时候，服务器会从`pubsub_channels`和`pubsub_patterns` 两个结构中找到符合`channelName` 的所有 Channel，进行消息的发送。在 `pubsub_channels` 中只要找到对应的 Channel 的 key 然后向对应的 value 链表中的客户端发送消息就好，
+发布消息比较好容易理解，当一个客户端执行了`publish channelName message` 命令的时候，服务器会从`pubsub_channels`和`pubsub_patterns` 两个结构中找到符合`channelName` 的所有 Channel，进行消息的发送。在 `pubsub_channels` 中只要找到对应的 Channel 的 key 然后向对应的 value 链表中的客户端发送消息就好。
 
 ### 06、总结
 
