--- a/_posts/2019-12-31-prod-oom.md
+++ b/_posts/2019-12-31-prod-oom.md
@@ -8,10 +8,29 @@ tags:
 
 ![](http://www.justdojava.com/assets/images/2019/java/image_yjq/oom/header.jpg)
 
-
 大家好，我是鸭血粉丝（大家会情切的喊我 **「阿粉」**），是一位喜欢吃鸭血粉丝的程序员，回想起之前线上出现 OOM 的场景，毕竟当时是第一次遇到这么 **紧脏** 的大事，要好好记录下来。
 
-<!-- more -->
+**1 事情回顾**
+
+**2 开始分析**
+
+    - **2.1 日志分析**
+    - **2.2 使用 MAT 分析 dump 文件**
+    - **2.3 根本原因**
+
+**3 性能优化**
+
+    - **3.1 业务、代码逻辑梳理**
+    - **3.2 通过 VisualVM 进行对比**
+
+**4 技术总结**
+
+    - **4.1 开发注意点**
+    - **4.2 应对故障注意点**
+
+**5 多说两句**
+
+<!--more-->
 
 # 1 事情回顾
 
