--- a/_posts/2019-12-31-prod-oom.md
+++ b/_posts/2019-12-31-prod-oom.md
@@ -8,7 +8,7 @@ tags:
 
 ![](http://www.justdojava.com/assets/images/2019/java/image_yjq/oom/header.jpg)
 
-大家好，我是鸭血粉丝（大家会情切的喊我 **「阿粉」**），是一位喜欢吃鸭血粉丝的程序员，回想起之前线上出现 OOM 的场景，毕竟当时是第一次遇到这么 **紧脏** 的大事，要好好记录下来。
+大家好，我是鸭血粉丝（大家会亲切的喊我 **「阿粉」**），是一位喜欢吃鸭血粉丝的程序员，回想起之前线上出现 OOM 的场景，毕竟当时是第一次遇到这么 **紧脏** 的大事，要好好记录下来。
 
 **1 事情回顾**
 
@@ -152,7 +152,7 @@ tags:
 3. 与产品经理商量控制查询条件，减少查询的范围
 4. 与数据库交互时，减少无效的查询，合并查询和合并更新操作
 5. 减少 for 循环，尤其注意多层 for 循环嵌套问题！
-6. 调用老代码要看注意=-=
+6. 调用老代码要注意=-=
 
 
 ## 4.2 应对故障注意点
