--- a/_posts/release/2020-02-20-upgrade.md
+++ b/_posts/release/2020-02-20-upgrade.md
@@ -30,30 +30,30 @@ tags:
 
 看看下面这个氛围~ 
 
-![image-20200205235043842](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020501.png)
+![image-20200205235043842](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020501.png)
 
-![image-20200205235312939](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020502.png)
+![image-20200205235312939](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020502.png)
 
 
 
 看到下面赞赏了吗？对于优质的内容，我们还会进行赞赏，多次分享很容易赚回门票~
 
-![image-20200205235332057](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020503.png)
+![image-20200205235332057](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020503.png)
 
-![image-20200205235348487](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020504.png)
+![image-20200205235348487](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020504.png)
 
-![image-20200205235402696](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020505.png)
+![image-20200205235402696](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020505.png)
 
-![image-20200205235421573](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020506.png)
+![image-20200205235421573](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020506.png)
 
-![image-20200205235437305](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020507.png)
+![image-20200205235437305](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020507.png)
 
-![image-20200205235453492](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020508.png)
+![image-20200205235453492](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020508.png)
 
-![image-20200205235453492](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/020509.png)
+![image-20200205235453492](http://www.justdojava.com/assets/images/2019/java/image_ziyou/020509.png)
 
 上面的内容只是星球过年期间的一部分内容，优质内容太多，没办法全部呈现，大家可以进去自己看，反正星球规定前三天不满意可以推出，没有任何损失。如果对内容感兴趣就留下来点个赞，发个评论，大家互动一下，就当混个脸熟，万一后面擦出火花大家还有合作呢？
 
 最后再提醒一下，我们决定在 2020 年 2月 22 号开始涨价，由之前的 50 涨到 66，所以如果感兴趣想和我们 1600+ 球友一起进步的话，欢迎扫码下放二维码进入。如果你还在犹豫也没关系，先进去看看内容，满意就留下，不满意三天内退出，没有任何损失。阿粉在星球内等你哦！
 
-![image-20200205235453492](/Users/zhuxiang/IdeaProjects/justdojava.github.io/assets/images/2019/java/image_ziyou/子悠-知识星球.png)
+![image-20200205235453492](http://www.justdojava.com/assets/images/2019/java/image_ziyou/子悠-知识星球.png)
