--- a/_posts/2020-03-07-layoff.md
+++ b/_posts/2020-03-07-layoff.md
@@ -32,7 +32,7 @@ tags:
 
 小 A 的领导有错，错在不做任何调查，直接绩效考核评最低等，没有有效的沟通，即使要打最低等的绩效也要有充分的证据；HR 有错，领导只负责打绩效，最后面谈的还是 HR，HR 的做事风格，处理方式肯定是存在问题的，不然也不会闹的不欢，当然 HR 也是打工的，也是听命办事。
 
-那么小 A 有错吗？当然这个不同的人会有不同的看法，有说小 A 有错的，没有提升自己竞争能力，领导毕竟是领导做任何决定都是有意义的，所以肯定存在不足。有说没有的，首先给多少钱干多少事，另外工资就是给本职工作的，本职工作做得好，就是及格的，凭什么不给年终。
+那么小 A 有错吗？当然这个不同的人会有不同的看法，不过阿粉觉得没有，首先给多少钱干多少事，另外工资就是给本职工作的，本职工作做得好，凭什么不给年终，总不能领导说怎样就怎样。马云说过，员工离职只有两个原因，一个是做的不开心，一个是钱给的不到位，我相信大部分人应该都是第二种。可以看到任何公司和员工背后都是利益驱动的。
 
 ![生成结果](http://www.justdojava.com/assets/images/2019/java/image_ziyou/layoff03.jpg)
 
