--- a/_posts/2020-03-07-layoff.md
+++ b/_posts/2020-03-07-layoff.md
@@ -8,7 +8,7 @@ tags:
 
 大家好，我是鸭血粉丝，今天不聊技术，我们聊聊裁员的事情。
 
-![img](http://www.justdojava.com/assets/images/2019/java/image_ziyou/layoff01.png)
+![img](https://tva1.sinaimg.cn/large/00831rSTly1gclnafnum8j308s05r74b.jpg)
 
 最近阿粉的一个朋友跟阿粉抱怨，说自己被裁员了，而且去年的年终绩效考核被领导打成了最低等，没有拿到年终奖，想想自己辛苦一年最后却落得这个下场，实在是难受。为了避免泄露敏感信息，阿粉就称这个朋友为小 A 了。
 
@@ -24,7 +24,7 @@ tags:
 
 其实像小 A 这种情况，我想今年肯定特别多，不是一两个特例，虽然说现在是金三银四的时候，很多公司在招人，但是也有很多公司是在裁员的。毕竟想在这种大环境下不受影响是很难的，特别是对很多小公司来说。
 
-![生成结果](http://www.justdojava.com/assets/images/2019/java/image_ziyou/layoff02.jpg)
+![生成结果](https://tva1.sinaimg.cn/large/00831rSTly1gclnagbo5mj308c05twei.jpg)
 
 那么这件事情到底谁对谁错呢？
 
@@ -34,7 +34,7 @@ tags:
 
 那么小 A 有错吗？当然这个不同的人会有不同的看法，有说小 A 有错的，没有提升自己竞争能力，领导毕竟是领导做任何决定都是有意义的，所以肯定存在不足。有说没有的，首先给多少钱干多少事，另外工资就是给本职工作的，本职工作做得好，就是及格的，凭什么不给年终。
 
-![生成结果](http://www.justdojava.com/assets/images/2019/java/image_ziyou/layoff03.jpg)
+![生成结果](https://tva1.sinaimg.cn/large/00831rSTly1gclnahc7j6j3073068dfr.jpg)
 
 ### 深思
 
@@ -48,7 +48,7 @@ tags:
 
 阿粉觉得，我们要生于忧患，好好利用自己的业余时间，努力提升自身的竞争力，靠实力不被裁，即使被裁也可以很快找到下家。其次我们也需要发展第二职业，或者说我们的收入要多元化，不能光靠一个工资，两条腿走路比一条腿会稳很多。多接触优秀的人，培养自己的爱好，很多人都是靠自己的爱好挣钱的。
 
-![生成结果](http://www.justdojava.com/assets/images/2019/java/image_ziyou/layoff04.jpg)
+![生成结果](https://tva1.sinaimg.cn/large/00831rSTly1gclnair25nj30go0ieq4b.jpg)
 
 ### 写在最后
 
