--- a/_posts/2020-04-09-Qrcode.md
+++ b/_posts/2020-04-09-Qrcode.md
@@ -152,3 +152,6 @@ public class TestDemo {
 
 之前一个大学里面的朋友微信被盗，当时就是因为在学校门口扫了一个二维码，然后结果自己的微信就被盗了，所以大家扫描二维码的时候一定要看好，慎重，千万别随便的去扫描，不然自己的话费真的丢了，那就太尴尬了。
 
+### 参考
+
+-博客生成二维码代码来自番茄爱上西红柿 
