调整格式问题

--- a/_posts/2020/2020-07-31-HTTPDNS.md
+++ b/_posts/2020/2020-07-31-HTTPDNS.md
@@ -1,9 +1,10 @@
 ---
-layout:post
-title:三次握手和四次挥手说完了，还让我手动写个HTTP协议代码
-catgories:
-tags:
-    - 懿
+layout: post
+categories: HTTP
+title: 三次握手和四次挥手说完了，还让我手动写个HTTP协议代码
+tagline: by 懿
+tags: 
+  - 懿
 ---
 
 最近阿粉的同事们在准备面试，其中也有收到offer的几个不错的人，毕竟疫情稳定了，而阿粉在电话面试的时候，被问到关于HTTP协议的内容的时候，却显得有点麻木了，为什么呢？因为套路太深了，让阿粉猝不及防呀。
