--- a/_posts/2020/2020-09-28-java-hole.md
+++ b/_posts/2020/2020-09-28-java-hole.md
@@ -9,6 +9,8 @@ tags:
 
 > hello~各位读者好，我是鸭血粉丝（大家可以称呼我为「阿粉」）。今天，阿粉带着大家来了解一下 最近在项目中遇到的一个坑。
 
+<!--more-->
+
 **1业务场景**
 
 前端用了个富文本插件 `Ueditor` ，插件初始化的时候需要从后端获取 config 配置。
