--- a/_posts/2020/2020-12-09-mq.md
+++ b/_posts/2020/2020-12-09-mq.md
@@ -29,7 +29,7 @@ MQ 想必大家或多或少都用过，接入 MQ 之后的整体架构如下：
 
 ##  RPC 场景
 
-使用 RPC 的场景一般都是上有服务需要实时依赖下游服务的返回。
+使用 RPC 的场景一般都是上游服务需要实时依赖下游服务的返回。
 
 我们以一个登录服务为例，架构图如下：
 
@@ -100,7 +100,7 @@ MQ 想必大家或多或少都用过，接入 MQ 之后的整体架构如下：
 
 我们之前使用这种模式，通常会碰到几个问题：
 
-- 通常 06:00 就能下载到对账文件，但是有时候渠道端多账文件延迟，就会导致任务一执行失败，这样就会后续两个定时任务也会执行失败
+- 通常 06:00 就能下载到对账文件，但是有时候渠道端对账文件延迟，就会导致任务一执行失败，这样就会后续两个定时任务也会执行失败
 - 假设任务二数据过多，执行时间过长，任务三执行时还没结束，这就导致任务三无法拿到全量数据，导致对账异常
 - 整体任务执行时间过长
 - 任务一若调整时间，可能导致任务二，任务三都需要调整时间
@@ -126,7 +126,7 @@ MQ 想必大家或多或少都用过，接入 MQ 之后的整体架构如下：
 
 适合使用 MQ 的场景有：
 
-- 上游不管性下游结果的场景
+- 上游不关心下游结果的场景
 - 数据驱动的定时任务依赖
 
 ![](/Users/andy.xu/Downloads/007S8ZIlly1gh4rlz5r9aj30no0f2wgf.png)
