--- a/_posts/2020-12-13-JVM.md
+++ b/_posts/2020-12-13-JVM.md
@@ -1,12 +1,10 @@
 ---
 layout:post
 title:JDK里面自带了这么多的exe，你都挨着试过么？
-catgories:
+catgories: JDK
 tags:
     - 懿
 ---
-
-事情是这个样子的，阿粉的公司最近再错 CodeReview ，而阿粉在弄完自己的这块内容，心想着可算没我啥事了，我是不是可以去学习了，于是点开了想学已久的JVM调优的工具，这时候公司小老弟过来了，于是和我交流起这个工具的使用，听说我没调过这个，嘲笑的阿粉是无地自容呀。
 
 <--more-->
 
@@ -20,7 +18,7 @@ tags:
 
 我们都在最开始学Java的时候，安装过Java，不管是直接安装版本还是复制过来解压好的，大家都可以在JDK的安装目录中找到一些exe的程序，而这些exe的程序里面，有很多是我们不怎么去关注的性能的监控工具。
 
-![](http://www.justdojava.com/assets/images/2019/java/image_yi/2020/12-03/1.jpg)
+![](http://www.justdojava.com/assets/images/2019/java/image_yi/2020/12-13/1.jpg)
 
 大家可以看一下里面这些exe，是不是感觉Sun公司有时候也是很给力的，各种给大家隐藏的福利，就比如下面我们要说的JVM的调优工具，就是Jconsole，而还有一些比如说
 
