--- a/_posts/2021-01-04-pdd.md
+++ b/_posts/2021-01-04-pdd.md
@@ -44,7 +44,7 @@ Hello,大家好，我是阿粉~
 
 2021 年 1 月 4 日早上，疑似拼多多官方知乎账号发表回应，不过 1 分钟之后就被秒删。
 
-不过互联网都是有记忆的，许多知乎网友都看到这个回答，对此截图。
+不过互联网都是有记忆的，许多知乎网友都看到这个回答，截图传播。
 
 ![](https://tva1.sinaimg.cn/large/0081Kckwly1gmc0kmelv7j31340l411d.jpg)
 
@@ -60,9 +60,13 @@ Hello,大家好，我是阿粉~
 
 ![](https://tva1.sinaimg.cn/large/0081Kckwly1gmc0zlszzcj30u018vb29.jpg)
 
-本来事情也许就到此为止了，官方都发声明辟谣了，但是网上那些截图真的是伪造吗？
+本来事情也许就到此为止了，官方都发声明辟谣了，**但是网上那些截图真的是伪造吗？**
 
-这时**知乎**站出来了，小管家拿出了后台数据，啪啪打了拼多多的脸。
+如果真的是假的，那么作为这张截图的源头知乎，起码也要负相关的责任。
+
+拼多多这是要把黑锅甩给知乎啊，不过知乎没怂，选择了硬刚。
+
+知乎小管家拿出了后台数据，时间精确到了秒，啪啪打了拼多多的脸，砍了拼多多一刀。
 
 ![](https://tva1.sinaimg.cn/large/0081Kckwly1gmc1353jycj312m0hq423.jpg)
 
@@ -112,7 +116,9 @@ Hello,大家好，我是阿粉~
 
 其实写到这里，阿粉觉得真的有点无奈，身处现在互联网圈子，感觉个体力量真的很渺小。我们只能被资本摆布，只能逼着去 996。
 
-哎，真的很痛心！
+不过即使这样，阿粉还是要发声，让这件事能被更多的读者看到。
+
+哎，真的很痛心！希望这次事件能成为大家反抗 996 的一次契机。
 
 最后提醒大家一下，真的要注意一下自己的身体健康，平时有时间的话还是要适当运动一下，毕竟身体是我们自己的。
 
