--- a/_posts/2021-07-20-canal.md
+++ b/_posts/2021-07-20-canal.md
@@ -125,9 +125,10 @@ update example set username = '张小三' where id = 1;
 
 ![](http://www.justdojava.com/assets/images/2019/java/image_ziyou/2021/0722/10.png)
 
-从上图中我们可以看到插入的数据以及更新的数据都被实时的监听到了。监听到数据过后，我们就可以根据事件类型以及相应的库和表名来进行过滤操作了。
+从上图中我们可以看到插入的数据以及更新的数据都被实时的监听到了。监听到数据过后，我们就可以根据事件类型以及相应的库和表名来进行过滤操作了。对了，我们可以通过配置 filter 来过滤需要监听的数据库和数据表或者字段，这个都是可以实现的，避免无用的数据变更带来的影响。
 
-> 对了，我们可以通过配置 filter 来过滤需要监听的数据库和数据表或者字段，这个都是可以实现的，避免无用的数据变更带来的影响。对于访问 GitHub 很慢的小伙伴，阿粉已经帮大家把 Canal 的压缩包下载好了，公众号回复【canal】即可获取网盘地址。
+> 对于访问 GitHub 很慢的小伙伴，阿粉已经帮大家把 Canal 的压缩包下载好了，公众号回复【canal】即可获取网盘地址。
 
-链接: https://pan.baidu.com/s/1DK2A6vJFBrbZidi4Ek-7hg 提取码: 9wkr 复制这段内容后打开百度网盘手机App，操作更方便哦
+## 总结
 
+今天的文章给大家分享了 Canal 的使用，感兴趣的小伙伴可以自己去试试，如果需要的话，可以在项目中用起来，会事半功倍。
