--- a/_posts/2021-08-02-02.md
+++ b/_posts/2021-08-02-02.md
@@ -7,3 +7,11 @@ tags:
   - 子悠
 ---
 
+Hello 大家好，我是阿粉，虽然说 Java 已经更新很多的版本，如下图所示，不过阿粉相信很多小伙伴的公司应该使用的大部分都还是 Java8，有些甚至更老。Java8 也发布了七年的时间了，作为使用最广泛的一个版本，关于它的垃圾回收器 G1 和老版本的 CMS 有什么区别，相信很多小伙伴也不一定了解，今天我们就来看一下。
+
+![](/Users/silence/Library/Application Support/typora-user-images/image-20210802223127294.png)
+
+### 背景
+
+关于什么是垃圾回收器阿粉这边就不做解释了，毕竟关注阿粉的都是有经验的程序员，如果不知道的偷偷的去学习一下，或者搜索一下阿粉前面的文章，有相关的内容。https://mp.weixin.qq.com/s/T74yVYn1pSxb4EFghTmGLA
+
