--- a/_posts/2021-08-02-02.md
+++ b/_posts/2021-08-02-02.md
@@ -30,5 +30,7 @@ CMS 的垃圾回收有四个过程
 
 ### G1
 
-前面我们聊完了 CMS，接下来我们聊一下 G1，G1 全称
+前面我们聊完了 CMS，接下来我们聊一下 G1，G1 全称garbage First，再讲 G1 垃圾回收器的细节之前，我们首先要知道的是 G1 对整个堆的空间做了重新的定义。G1 中的老年代也年轻代已经不再是物理隔离的了，而是逻辑隔离。在 G1 中整个堆空间被分成了一个个相同大小的 Region 块，多个 Region 块在逻辑上组成了年轻代和老年代。
+
+这样做的目的是因为在进行垃圾回收的时候不需要进行整个堆空间的扫描，同时可以根据指定停顿时间来进行垃圾回收。
 
