--- a/_posts/release/2021-06-02-DCS.md
+++ b/_posts/release/2021-06-02-DCS.md
@@ -1,9 +1,10 @@
 ---
-layout:post
+layout: post
+categories: Java
 title: 分布式全局唯一ID方案这么多？
-catgories: 
-tags:
-    - 懿
+tagline: by 懿
+tags: 
+  - 懿
 ---
 
 前段时间阿粉想着如何去优化我们公司中已经存在的分布式中的唯一ID，而提起唯一的ID，相信如果不是从事传统行业的人，肯定都有所了解，分布式架构下，唯一ID生成方案，是我们在设计一个系统，尤其是数据库使用分库分表的时候常常会遇见的问题，尤其是当我们进行了分库分表之后，对这个唯一ID的要求也就越来越高。那么唯一ID方案都有哪些呢？
