--- a/_posts/release/2021-05-17-Mybatis.md
+++ b/_posts/release/2021-05-17-Mybatis.md
@@ -1,9 +1,10 @@
 ---
-layout:post
+layout: post
+categories: Java
 title: 用了这么久的Mybatis，结果面试官问的问题，我竟然还犹豫了
-catgories: 
-tags:
-    - 懿
+tagline: by 懿
+tags: 
+  - 懿
 ---
 
 前段时间阿粉的一个朋友和阿粉吃饭，在吃饭的时候和阿粉疯狂的吐槽面试官，说面试官问的问题都是些什么问题呀，我一个干了三四年的开发，也不说问点靠谱的，阿粉很好奇，问题问完基础的，一般不都是根据你自己的简历进行提问么？而接下来他说的出来的问题，阿粉表示，阿粉需要继续学习了。
