--- a/_posts/2021-08-02-02.md
+++ b/_posts/2021-08-02-02.md
@@ -11,6 +11,8 @@ tags:
 
 CMS 垃圾回收器，全称**Concurrent Mark Sweep** 并发标记-清除，从名字上面我们也可以看出这个垃圾回收器是基于标记清除算法实现的。首先"并发"表示 GC 线程可以和用户线程并发执行，同时既然是标记-清除算法，说明这个垃圾回收器会产生很多碎片，这是标记-清除算法的缺点。同时 CMS 是作用于老年代的，老年代的垃圾回收频率相对年轻代会低一点。
 
+<!--more-->
+
 CMS 的垃圾回收有四个过程
 
 1. 初始标记：
