--- a/_posts/2021/2021-03-25-maven.md
+++ b/_posts/2021/2021-03-25-maven.md
@@ -1,9 +1,9 @@
 ---
-layout： post
-categories： maven
-title： 讲讲它的构建生命周期和拉取 jar 包流程
-tagline： by 郑璐璐
-tags： 
+layout: post
+categories: Java
+title: 讲讲它的构建生命周期和拉取 jar 包流程
+tagline: by 郑璐璐
+tags: 
   - 郑璐璐
 ---
 我们都知道， Maven 是一款非常优秀的软件项目管理 & 自动构建的工具，相信各位在项目中都多多少少接触过
