--- a/_posts/2021/2021-05-30-redis.md
+++ b/_posts/2021/2021-05-30-redis.md
@@ -9,6 +9,8 @@ tags:
 
 Hello 大家好，我是阿粉，Redis 作为工作中不可缺少的缓存组件，相信很多小伙伴都会使用到，我们日常使用的时候都是通过代码或者客户端去链接 Redis 服务器来操作数据的。那么一条简单的`set name ziyou` 命令是如何执行的，中间都经历了哪些过程想必很少会有人去了解。今天阿粉就带大家看一下一条简单的`set name ziyou` 命令是如何执行的。
 
+<!--more-->
+
 ![image-20210530212711397](/Users/silence/Library/Application Support/typora-user-images/image-20210530212711397.png)
 
 我们可以看到在执行`set name ziyou` 这个命令过后，先显示一个`OK` 在终端里面。下面我们看下这整个过程都经历了哪些步骤。
