--- a/_posts/2021/2021-06-05-mockito.md
+++ b/_posts/2021/2021-06-05-mockito.md
@@ -10,6 +10,8 @@ tags:
 
 Hello 大家好，我是阿粉，日常工作中很多时候我们都需要同事间的相互配合协作完成某些功能，所以我们经常会遇到服务或者应用内不同模块之间要互相依赖的场景。比如下面的场景，`serviceA` 中的 `methodA()` 方式依赖 `serviceB` 中的 `methodB()` 方法返回操作的结果。那如果我们要对自己的`methodA()` 方法进行编写单元测试，还需要等其他同事的`methodB()` 方法开发完成才行。那有没有什么办法我们可以跳过或者说模拟方法 B 的输出呢？这就引出了我们今天的主角 `Mockito`，一个优秀的 `Mock` 测试框架。
 
+<!--more-->
+
 ![](http://www.justdojava.com/assets/images/2019/java/image_ziyou/2021/0607/1.png)
 
 我们通过使用 `Mock` 技术可以让开发不停滞，`Mock`技术的作用是将服务于服务之间的依赖在测试自测阶段隔离开，让开发人员在自己的应用内部通过模拟的方式把需要依赖外部的接口给构造出来，从而保证不被外界的开发进度所影响。今天我们要谈到的`Mockito` 就是一个优秀的 `Mock` 框架。
