--- a/_posts/2021/2021-07-04-didi.md
+++ b/_posts/2021/2021-07-04-didi.md
@@ -9,6 +9,8 @@ tags:
 
 Hello 大家好，我是阿粉，最近刚刚过完我党的百年生辰，本是举国同庆的时候，但是往往就有很多不法分子违法违规，这不滴滴就被网信办宣布在所有应用市场下架了么。如下所示
 
+<!--more-->
+
 7 月 4 日，国家互联网信息办公室通报称，根据举报，经检测核实，**“滴滴出行” App 存在严重违法违规收集使用个人信息问题。**国家互联网信息办公室依据《中华人民共和国网络安全法》相关规定，通知应用商店下架“滴滴出行”App，要求滴滴出行科技有限公司严格按照法律要求，参照国家有关标准，认真整改存在的问题，切实保障广大用户个人信息安全。
 
 ![](http://www.justdojava.com/assets/images/2019/java/image_ziyou/2021/0704/1.png)
