--- a/_posts/2021/2021-07-07-javamap.md
+++ b/_posts/2021/2021-07-07-javamap.md
@@ -9,6 +9,8 @@ tags:
 
 Hello，大家好，我是阿粉，最近看文章发现一个 `Java` 学习路线图的资料，觉得很不错就拿过来分享给大家，目前这个版本是 1.0 的，之所以说这个是 1.0 的版本主要是因为还有一些高级内容没有加进去，比如 `JVM`，容器，消息队列，云原生等都还没有提到，不过对于初学者来说这个路线图已经可以上手完成工作了。
 
+<!--more-->
+
 作为 `Java` 程序员的阿粉不得不说，现在的小伙伴们是真的很幸福，互联网如此的发达，网上各种学习资料以及开源项目可以免费学习。虽然说这些资料方便了小伙伴们的学习，但是同样也会带来一个问题，那就是对于琳琅满目的资料显得无从下手，没有体系，不知道工作中到底会用到哪些，抓不到重点。这个时候 `Java` 学习路线图就可以起到一个辅助的作用了。
 
 ![]http://www.justdojava.com/assets/images/2019/java/image_ziyou/2021/0708/1.png)
