--- a/_posts/2021/2021-07-13-jingdong.md
+++ b/_posts/2021/2021-07-13-jingdong.md
@@ -9,6 +9,8 @@ tags:
 
 Hello，大家好，我是阿粉，最近互联网大厂频繁有动静出来，先是滴滴被下架二十多款 APP，后面有快手，字节宣布取消大小周，再有京东宣布涨薪两个月，这边 7.13 号晚 B站也挂了。
 
+<!--more-->
+
 滴滴下架 APP 我们就不说了，毕竟涉及到很多政治因素。关于字节取消大小周的事情，几家欢喜几家愁，据说有很大一部分员工是有意见的，因为毕竟字节加班是双倍工资的，如果说取消了大小周，每年可能会少了十多万的收入。相比很多 996 加班不给钱的公司，已经算是人性化了，所以最近阿粉的朋友圈就被很多在哭穷的字节大佬刷屏，表示不满但是有干不掉。
 
 那边人家取消大小周，这边东哥宣布涨薪两个月，建议互联网大厂的老板都跟东哥学学，人狠话不多，直接涨薪就好了。那为什么东哥能这么豪横呢？简单来说就是不差钱啊！不过这次普遍涨薪的是 N序列，T 序列和 P 序列，分别就是管理，技术和项目三条线，不包含很多物流小哥，不过具体方案还没定下来，这对于有三十多万员工的京东来说，着实是一笔大手笔。为啥京东现在这么有钱呢？主要是京东一季度的净利润是 36 亿，同比增长两倍多。而且去年年底京东健康上市，今年京东物流又上市，所以一句话说那就是东哥有钱。
