--- a/_posts/2021/2021-07-27-url.md
+++ b/_posts/2021/2021-07-27-url.md
@@ -9,6 +9,8 @@ tags:
 
 Hello 大家好，我是阿粉。虽然说金三银四已经过去，但是金九银十快要来了，作为一个居安思危的阿粉，无时无刻不在准备着学习和面试，今天这个题目相信很多面试过的小伙伴都被问到过，问题其实不难，只是如果有的小伙伴没有遇到过，可能不会思考到具体的细节，或者说很多东西可能都知道但是并不知道面试官问这个问题的点在哪，所以会有所欠考虑抓不到重点。下面我们就依次来看一下整个过程到底发生了什么。
 
+<!--more-->
+
 我们先想一个整个过程中会涉及到哪些流程：
 
 1. 域名解析
