--- a/_posts/release/2021-05-09-Inteview.md
+++ b/_posts/release/2021-05-09-Inteview.md
@@ -1,9 +1,10 @@
 ---
-layout:post
+layout: post
+categories: Java
 title: 当你发现你同事是培训出来的，你会怎么做
-catgories: 
-tags:
-    - 懿
+tagline: by 懿
+tags: 
+  - 懿
 ---
 
 大家看到这个标题的时候，是不是感到有些惊讶，为什么阿粉能够这么敏锐，这都发现同事是培训出来的，但是还不好戳穿人家，毕竟人家面试都能通过，说明了技术是不是已经上升到这个水平了，阿粉今天就来给大家说说这是怎么一回事。
