--- a/_posts/2022-01-03-java.md
+++ b/_posts/2022-01-03-java.md
@@ -1,13 +1,36 @@
 ---
 layout: post
 categories: Java
-title: 发现 Log4j2 漏洞的程序员绩效该打 3.75 还是 3.25？
+title: 程序员周报写不出来怎么办？
 tagline: by 子悠
 tags: 
   - 子悠
 ---
 
+今天是 2022 年的第一个工作日，沉浸在假期中的打工人又要开启一年的打工之路了，毕竟只有我们好好努力，老板们才能更早的换车换房。
 
+2021 年已经结束了，这几天陆陆续续的大家都在进行年终总结，大佬们也组织了各种跨年演讲。对于我们程序员来说，写周报都感觉已经很难了，还要写年终总结，简直不要太难。
 
 <!--more-->
+
+说到写周报知乎上面就有一个网友提问，程序员周报写不出来怎么办？关注的人数已经达到 24 w 了，看来这个问题已经是个很常见的问题，很多人都写不出周报，觉得一周好像做了一些事情，但是又好像啥也没做，但是确实又做了，就是说不出来。
+
+![](/Users/silence/Library/Application Support/typora-user-images/image-20220103231349193.png)
+
+在阿粉看来，周报写不出来主要有两个原因：
+
+1. 程序员都比较务实。接手的每一个需求的底层实现都基本上知道，用到的一些东西要么就是很简单的一些 CRUD，要么就是一些开源的实现，很多事情处理起来很普通，所以在写周报的时候就不会把一些鸡毛蒜皮的小事当成噱头来封装汇报，毕竟在懂行的同事和领导眼中这个都很简单，特别是在一些技术出身的领导面前，这样更是班门弄斧，完全没必要，很有可能还会让别人觉得自己在炫耀。
+2. 再一个是程序员的工作很难用一些指标去衡量。程序员的周报不可能像产品或者业务人员一样，用很多指标和图标来进行展现，毕竟总不能把自己每周写了多少行代码，出了多少个 Bug，以及解了多少个 Bug 都用图标表述出来吧。而且不像产品开个会都可以写上周报，会是开完了，但是功能还没实现，自然写不出什么内容。
+
+那很多小伙伴就要问了，写不出来不行，领导要看啊。
+
+是的，所以程序员的周报或者说技术人还是要善于包装和展现自己，我们不能单单的只盯着产品的 PRD 实现一些需求，在完成需求的同时要加上自己的思考，这些内容本身都是工作。
+
+比如说在开始编码之前，我们可以想好设计方案，自己对这个项目是如何设计技术方案的，会产生什么问题和风险，怎么解决以及如果要和其他团队对接的话会不会有难度需不需要领导协调资源等等。这些内容其实都是我们的工作，有些东西如果前期没有想好的话，后期可能会造成项目延期。另外汇报工作的进度也可以按照百分比进行汇报，汇报一下目前的项目进度到哪，以及是否有遇到问题。
+
+周报的目的虽然说是为了让领导知道我们项目进展是否顺畅，更有一个很重要的点就是让领导知道我们是否遇到问题，毕竟很多问题是需要领导提供和协调资源的。毕竟有的时候不给领导安排点任务，怎么才能体现领导的重要性。
+
+适当的对自己的工作进行总结，对技术来说也是很重要的。不管是周报，还是述职或者是年终总结，每过一个阶段对自己上一个阶段进行回溯，总是可以得到很多收获。
+
+所以你们公司要求写周报吗？欢迎在评论区留言探讨。
 
