--- a/_posts/2022/2022-04-16-enumset.md
+++ b/_posts/2022/2022-04-16-enumset.md
@@ -89,7 +89,7 @@ public class ColorTest {
 
 在进行 `put` 的时候，会先进行类型检查，如果说传进来的不是枚举或者说不是在构造的时候指定的枚举，这里就会抛出异常。当类型检查通过以后，会通过枚举的 `ordinal()` 方法获取该枚举实例的索引，这个方法会返回一个 `int` 值，返回的值跟枚举在编写的时候的顺序有关系，比如说我们上面创建的 `Color` 枚举，`Color.BLUE.ordinal()` 会返回 0，`Color.RED.ordinal()` 会返回 1。拿到索引过后，就会在对应的数组位置上放上 `value` 值。![](https://tva1.sinaimg.cn/large/e6c9d24egy1h1crl2chb6j20y00go40c.jpg)
 
-获取数据的时候就更简单了，直接通过 `key` 获取到索引，然后从数组中那去数据即可。
+获取数据的时候就更简单了，直接通过 `key` 获取到索引，然后从数组中拿取数据即可。
 
 ```java
     public V get(Object key) {
@@ -122,13 +122,13 @@ public class ColorTest {
   }
 ```
 
-另外前面提到会使用到枚举的 `ordinal()` 方式，所以我们在构造 `EnumSet` 的时候还可以只构造指定两个枚举范围之间的所有枚举值，这里要注意 `range` 方法的第二哥参数的枚举不能在第一个枚举前面。
+另外前面提到会使用到枚举的 `ordinal()` 方式，所以我们在构造 `EnumSet` 的时候还可以只构造指定两个枚举范围之间的所有枚举值，这里要注意 `range` 方法的第二个参数的枚举不能在第一个枚举前面。
 
 ```java
 EnumSet.range(Color.BLUE,Color.RED);
 ```
 
-还可以通过 `EnumSet` 的 `of` 方法来构造指定的枚举集合，通过源码我们可以发现不管是通过什么方法了构造，底层都是先构造一个空集合，然后将对应的枚举元素添加进行。构造空集合的实现逻辑如下，这里我们可以看到，当枚举个数大于 64 的时候，采用的是 `JumboEnumSet` 这个子类，否则都是 `RegularEnumSet` 这个子类，正常来说一个枚举的实例个数超过 64 的会比较少吧。
+还可以通过 `EnumSet` 的 `of` 方法来构造指定的枚举集合，通过源码我们可以发现不管是通过什么方法进行构造，底层都是先构造一个空集合，然后将对应的枚举元素添加进行。构造空集合的实现逻辑如下，这里我们可以看到，当枚举个数大于 64 的时候，采用的是 `JumboEnumSet` 这个子类，否则都是 `RegularEnumSet` 这个子类，正常来说一个枚举的实例个数超过 64 的会比较少吧。
 
 ```
     public static <E extends Enum<E>> EnumSet<E> noneOf(Class<E> elementType) {
@@ -147,4 +147,5 @@ EnumSet.range(Color.BLUE,Color.RED);
 
 ### 总结
 
-今天给大家介绍了两个不常用，但是很好用的 `JDK` 集合类，在某些场景中还是可以提升一定的性能的，小伙伴有使用过这两个集合吗？在评论去告诉阿粉！
+今天给大家介绍了两个不常用，但是很好用的 `JDK` 集合类，在某些场景中还是可以提升一定的性能的，小伙伴有使用过这两个集合吗？在评论区告诉阿粉！
+
