--- a/_posts/2022/2022-04-28-zsh.md
+++ b/_posts/2022/2022-04-28-zsh.md
@@ -50,18 +50,18 @@ plugins=(git zsh-autosuggestions)
 
 官方提供的主题和插件很多，比如下面主题，每一款都有各自的特点，大家可以根据自己喜欢的款式进行挑选。
 
-![](https://user-images.githubusercontent.com/49100982/108254738-764b8700-716c-11eb-9a59-4deb8c8c6193.jpg)
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h1qtb4r4z7j218l0u0jtr.jpg)
 
 
 
 
 
-![afowler](https://user-images.githubusercontent.com/49100982/108254744-777cb400-716c-11eb-9407-1463775bbc25.jpg)
+![afowler](https://tva1.sinaimg.cn/large/e6c9d24egy1h1qtb8hjj5j218l0u0acf.jpg)
 
 
 
-![agnoster](https://user-images.githubusercontent.com/49100982/108254745-777cb400-716c-11eb-800a-a8cfa612253f.jpg)
+![agnoster](https://tva1.sinaimg.cn/large/e6c9d24egy1h1qtbbnav8j218l0u0ach.jpg)
 
 
 
-![jonathan](https://user-images.githubusercontent.com/49100982/108254860-8c594780-716c-11eb-8f8b-be04d4943216.jpg)
+![jonathan](https://tva1.sinaimg.cn/large/e6c9d24egy1h1qtbeg4r9j218l0u0jua.jpg)
