--- a/_posts/2022/2022-09-18-enable.md
+++ b/_posts/2022/2022-09-18-enable.md
@@ -8,6 +8,8 @@ tags:
 title: 后端程序员对于 Docker 要掌握多少才行？阿粉的答案是...
 前面的文章给大家介绍 `Spring` 的重试机制的时候有提到过 `Spring` 有很多 `@Enable` 开头的注解，平时在使用的时候也没有注意过为什么会有这些注解，今天就给大家介绍一下。
 
+<!--more-->
+
 ## @Enable 注解
 
 首先我们先看一下有哪些常用的 `@Enable` 开头的注解，以及都是干什么用的。
