--- a/_posts/2022/2022-08-14-docker.md
+++ b/_posts/2022/2022-08-14-docker.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 categories: Java
-title: 后端程序化 docker 学到什么程度就好？
+title: 后端程序员对于 Docker 要掌握多少才行？阿粉的答案是
 tagline: by 子悠
 tags: 
   - 子悠
-title: 后端程序员对于 Docker 要掌握多少才行？阿粉的答案是...
+---
+
 阿粉的答案是会部署服务就行了。
 
 关于 `Docker` 阿粉相信作为后端程序员小伙伴们多多少少都听过或者用过，而且很多时候也都是因为要使用的时候才会去学习，毕竟学了用不上还不如不学。
